--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,6 +1,6 @@
 ---
 ---
-<html>
+<html lang="en">
     <head>
         <title>University of Waterloo Software Engineering 2021 Class Profile</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Source+Code+Pro:400,600" rel="stylesheet">
